--- a/index.html
+++ b/index.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+body {
+  font-size: 28px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
+}
+
+.active {
+  background-color: #6d7375;
+}
+</style>
+</head>
 <body>
+
+<div class="header">
+  <h2>Stokes</h2>
+  <p>Gekörter Hengst</p>
+</div>
+
+<ul>
+  <li><a class="active" href="#home">Startseite</a></li>
+  <li><a href="#news">Aktuelles</a></li>
+  <li><a href="#contact">Kontakt</a></li>
+  <li><a href="#about">Über uns</a></li>
+</ul>
 
 <h1>Stokes</h1>
 
 <p>Updates folgen.</p>
-
 </body>
 </html>
