--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@ li a:hover {
 </div>
 
 <ul>
-  <li><a class="active" href="#home">Startseite</a></li>
-  <li><a href="#news">Aktuelles</a></li>
-  <li><a href="#contact">Kontakt</a></li>
-  <li><a href="#about">Über uns</a></li>
+  <li><a class="active" href="index.html">Startseite</a></li>
+  <li><a href="aktuelles.html">Aktuelles</a></li>
+  <li><a href="kontakt.html">Kontakt</a></li>
+  <li><a href="ueberuns.html">Über uns</a></li>
 </ul>
 
 <h1>Stokes</h1>
